se AÑADE logica para rewards algunos casos automaticos, otros acumulables
